--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-    "name": "SOSI",
-    "version": "0.0.1",
-    "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-contrib-uglify": "~0.2.0",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-watch": "~0.4.3"
-    }
+  "name": "SOSI",
+  "version": "0.0.1",
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-watch": "~0.4.3"
+  },
+  "dependencies": {
+    "iconv": "2.2.1",
+    "proj4": "2.3.14",
+    "underscore": "1.5.2"
+  }
 }
